--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -267,8 +267,8 @@ button {
 
 html {
   font-size: var(--base-font-size);
-  -webkit-tap-highlight-color: transparent;
   /* for mobile */
+  -webkit-tap-highlight-color: transparent;
 }
 
 body {
@@ -279,8 +279,8 @@ body {
   line-height: 20px;
   letter-spacing: .2px;
   min-height: 100vh;
-  min-height: 100dvh;
   /* for mobile*/
+  min-height: 100dvh;
   display: flex;
   flex-direction: column;
   padding-block: var(--header-height) 16px;
@@ -350,9 +350,29 @@ body {
   #SKIP TO CONTENT
 \*-----------------------------------*/
 
+.skip-to-content {
+  position: fixed;
+  top: 4px;
+  left: 4px;
+  height: 56px;
+  display: grid;
+  place-items: center;
+  background-color: var(--on-background);
+  padding-inline: 24px;
+  color: var(--background);
+  font-size: var(--label-1);
+  font-weight: var(--weight-medium);
+  border-radius: var(--radius-8);
+  outline-offset: 2px;
+  opacity: 0;
+  pointer-events: none;
+  z-index: 5;
+}
 
-
-
+.skip-to-content:focus-visible {
+  opacity: 1;
+  pointer-events: all;
+}
 
 /*-----------------------------------*\
   #HEADER
