--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,6 +275,7 @@ body {
   background: var(--background);
   color: var(--on-background);
   font-family: var(--font-primary);
+  font-size: var(--label-1);
   font-weight: var(--weight-regular);
   line-height: 20px;
   letter-spacing: .2px;
@@ -300,7 +301,13 @@ body {
   #UTILITY
 \*-----------------------------------*/
 
+.text-primary {
+  color: var(--primary);
+}
 
+.text-error {
+  color: var(--error);
+}
 
 
 
@@ -308,6 +315,18 @@ body {
   #REUSED STYLE
 \*-----------------------------------*/
 
+.container {
+  padding-inline: 16px;
+  max-width: 1280px;
+  width: 100%;
+  margin-inline: auto;
+}
+
+.material-symbols-rounded {
+  width: 1em;
+  height: 1em;
+  font-variation-settings: 'FILL' 1, 'wght' 400, 'GRAD' 0, 'opsz' 24;
+}
 
 
 
@@ -318,6 +337,79 @@ body {
 
 /* Icon button */
 
+.icon-btn {
+  background-color: var(--surface-variant);
+  min-width: 48px;
+  width: 48px;
+  height: 48px;
+  border-radius: var(--radius-circle);
+  border: 1px solid var(--surface-variant-outline);
+  display: grid;
+  place-items: center;
+  transition: var(--transition-short);
+  transition-property: background-color, border-color;
+}
+
+.icon-btn:where(:hover, :focus-visible):not(:active) {
+  background-color: var(--surface-variant-hover);
+  border-color: var(--surface-variant-outline-hover);
+}
+
+.icon-btn .material-symbols-rounded {
+  color: var(--on-background);
+}
+
+/* Search box */
+
+.search-box .leading-icon,
+.search-btn .label-1 {
+  display: none;
+}
+
+.search-box {
+  position: relative;
+  /* position: relative; tetap menyisakan ruang kosong diposisi awalnya dan bisa diubah posisi nya */
+  border-radius: var(--radius-pill);
+  overflow: hidden;
+  flex-grow: 1;
+}
+
+.search-field {
+  height: 48px;
+  line-height: 48px;
+  background-color: var(--surface-variant);
+  padding-inline: 16px 64px;
+  border-radius: inherit;
+  outline: none;
+}
+
+.search-field:focus {
+  box-shadow: inset 0 0 0 2px var(--primary)
+}
+
+.search-field::placeholder {
+  color: var(--alpha-60);
+}
+
+.search-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 48px;
+  background-color: var(--primary);
+  color: var(--white);
+  font-weight: var(--weight-medium);
+  display: grid;
+  place-items: center;
+  border-radius: var(--radius-pill);
+  transition: var(--transition-short);
+}
+
+/* Build Your First GitHub App with JavaScript and GitHub API: Easy and Fast */
+.search-btn:where(:hover, :focus-visible):not(:active) {
+  background-color: var(--primary-hover);
+}
 
 /* Button */
 
@@ -328,7 +420,6 @@ body {
 /* Tab navigation */
 
 
-/* Search box */
 
 
 /* Card */
@@ -378,9 +469,72 @@ body {
   #HEADER
 \*-----------------------------------*/
 
+.header {
+  background-color: var(--background);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: var(--header-height);
+  align-items: center;
+  display: flex;
+  transition: background-color var(--transition-short);
+  z-index: 4;
+}
 
+.header.active {
+  background-color: var(--surface);
+}
 
+.header .container {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
 
+.logo {
+  color: var(--on-background);
+  font-size: 26px;
+  font-weight: var(--weight-bold);
+  line-height: 26;
+}
+
+.logo .text-primary {
+  display: inline;
+}
+
+.header-search {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 8px;
+  flex-grow: 1;
+}
+
+.header:not(.search-active) .header-search {
+  margin-inline-start: auto;
+}
+
+/* From ChatGPT start */
+[data-theme="dark"] .theme-btn .moon-icon,
+[data-theme="light"] .theme-btn .sun-icon {
+  display: none;
+}
+
+/* Menampilkan ikon yang sesuai dengan tema yang dipilih */
+[data-theme="dark"] .theme-btn .sun-icon,
+[data-theme="light"] .theme-btn .moon-icon {
+  display: inline;
+}
+
+/* Aturan CSS lainnya */
+.header:not(.search-active) .search-box,
+.header.search-active :where(.logo, .theme-btn),
+.search-toggler[aria-expanded="true"] .search-icon,
+.search-toggler[aria-expanded="false"] .close-icon {
+  display: none;
+}
+/* end */
 
 /*-----------------------------------*\
   #PROFILE
